# stargazer_ros

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: LandmarkFinderInterfaceConfig.cfg  LandmarkLocalizerInterfaceConfig.cfg
doc/: Calibration.md  Pipeline.md  SystemOverview.md  SystemSetup.md
launch/: bundle_adjuster.launch  demo.launch  image_undistorter_nodelet.launch  landmark_calibrator.launch  landmark_finder_nodelet.launch  landmark_localizer_node.launch  landmark_localizer_nodelet.launch  landmark_visualizer.launch  pose_visualizer.launch  prosilica_calib.launch  prosilica_cam_only.launch  reprojection_visualizer.launch  rosbag_play.launch  rosbag_record.launch  stargazer_all.launch  stargazer_demo.launch  stargazer_nodelets.launch  stargazer_only.launch  stargazer_visualization.launch  static_landmark_visualizer.launch  static_transform.launch  test.launch
msg/: Landmark.msg  LandmarkPoint.msg
res/: observed_poses.xml  poses_optimized.xml  stargazer.rviz  stargazer.yaml  stargazer_optimized.yaml  stargazer_optimized_org.yaml  stargazer_org.yaml
src/: StargazerConversionMethods.h  StargazerMessageAdapters.h  ros_utils.h
src/bundle_adjuster_node/: StarLandmark.h  bundle_adjuster.cpp
src/calibrateLandmarks/: StarLandmark.h  calibrateLandmarks.cpp
src/drawer/: drawer.cpp
src/image_undistorter/: ImageUndistorterInterface.cpp  ImageUndistorterInterface.h  ImageUndistorterInterfaceParameters.cpp  ImageUndistorterInterfaceParameters.h  image_undistorter_node.cpp  image_undistorter_nodelet.cpp
src/landmark_calibrator/: CMakeLists.txt  LandmarkCalibratorInterface.cpp  LandmarkCalibratorInterface.h  LandmarkCalibratorInterfaceParameters.cpp  LandmarkCalibratorInterfaceParameters.h  landmark_calibrator_node.cpp
src/landmark_finder/: LandmarkFinderInterface.cpp  LandmarkFinderInterface.h  LandmarkFinderInterfaceParameters.cpp  LandmarkFinderInterfaceParameters.h  landmark_finder_node.cpp  landmark_finder_nodelet.cpp
src/landmark_localizer/: CMakeLists.txt  LandmarkLocalizerInterface.cpp  LandmarkLocalizerInterface.h  LandmarkLocalizerInterfaceParameters.cpp  LandmarkLocalizerInterfaceParameters.h  landmark_localizer_node.cpp  landmark_localizer_nodelet.cpp
src/landmark_visualizer/: LandmarkVisualizerParameters.cpp  LandmarkVisualizerParameters.h  landmark_visualizer.cpp
src/localizer_node/: Stargazer.cpp  Stargazer.h  node.cpp
src/pose_visualizer/: CMakeLists.txt  PoseVisualizerParameters.cpp  PoseVisualizerParameters.h  pose_visualizer.cpp
src/reprojectionVisualizer/: reprojectionVisualizer.cpp
src/reprojection_visualizer/: ReprojectionVisualizer.cpp  ReprojectionVisualizer.h  ReprojectionVisualizerParameters.cpp  ReprojectionVisualizerParameters.h  reprojection_visualizer_node.cpp
src/rviz_visualizer_node/: visualizer.cpp
src/visualizer_node/: visualizer.cpp
test/: test_starlandmark.cpp
