<?xml version="1.0"?>
<package format="2">
    <name>stargazer_ros</name>
    <version>1.0.0</version>
    <description>A ROS wrapper for the stargazer library</description>

    <license>GPLv3</license>
    <maintainer email="piotr.orzechowski@kit.edu">Piotr Orzechowski</maintainer>
    <author email="claudio.bandera@kit.edu">Claudio Bandera</author>
    <url type="repository">https://github.com/KIT-MRT/stargazer_ros.git</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <test_depend>gtest</test_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <build_depend>roscpp</build_depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>

    <!--
      Documentation for dependencies:
      <build_depend>            Build-time dependency required to build
                                this package, e.g. boost, opencv.
      <build_export_depend>     Exported build-time dependency required to
                                build packages that depend on this package,
                                e.g. boost, opencv.
      <exec_depend>             Execution dependency required to run this
                                package, e.g. boost, opencv.
      <depend>                  Build-time, exported build-time and execution
                                dependency. This is a bundled synonym for
                                <build_depend>, <build_export_depend> and
                                <exec_depend>.
    -->
    <depend>stargazer</depend>

    <depend>tf</depend>
    <depend>rosbag</depend>
    <depend>message_filters</depend>
    <depend>tf2_geometry_msgs</depend>

    <depend>visualization_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>



    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
